[workspace]
# name = "balthamar"
# version = "0.1.0"
# authors = ["GONI Guillaume <gdn3@live.fr>"]

members = [
    "balthacli",
    "balthalib",
    "balthacephalo",
    "balthapode",
    "balthmessage",
    "balthwasm",
    "balthajob",
    "balthnative",
    "balthernet",
]

default-members = ["balthacli"]
