[package]
name = "balthachain"
version = "0.3.1"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthamisc = { path = "../balthamisc" }
balthaproto = { path = "../balthaproto" }
web3 = "0.14.0"
futures = "0.3.8"
ethabi = "12.0.0"
