[package]
name = "balthachain"
version = "0.3.2"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthamisc = { path = "../balthamisc" }
balthaproto = { path = "../balthaproto" }
web3 = { version = "0.14.0", default-features = false, features = ["ws-tokio"] }
futures = "0.3.8"
ethabi = "12.0.0"
