[package]
name = "balthacli"
version = "0.2.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthalib = { path = "../balthalib" }
# clap = "3"
clap = { git = "https://github.com/clap-rs/clap/" }
multiaddr = "0.3.1"
