[package]
name = "balthacli"
version = "0.2.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthalib = { path = "../balthalib" }
clap = "3.0.0-beta.1"
parity-multiaddr = "0.7.3"
