[package]
name = "balthacli"
description = "Command line interface to manipulate the Balthazar decentralized super-computer"
version = "0.3.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"
repository = "https://github.com/guydunigo/balthazar/"
license = "GPL-3.0-or-later"
readme = "../Readme.md"
# See https://crates.io/category_slugs
categories = ["command-line-utilities", "wasm network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthalib = { path = "../balthalib" }
clap = "3.0.0-beta.1"
parity-multiaddr = "0.8.0"
