[package]
name = "balthalib"
version = "0.2.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthernet = { path = "../balthernet" }
balthastore = { path = "../balthastore" }
balthurner = { path = "../balthurner" }
balthachain = { path = "../balthachain" }
balthaproto = { path = "../balthaproto" }
balthamisc = { path = "../balthamisc" }
balthwasm = { path = "../balthwasm" }
# TODO: restrict features to bare essentials.
tokio = { version = "0.2.12", features = ["full"] }
futures = "0.3.4"
