[package]
name = "balthalib"
version = "0.3.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthernet = { path = "../balthernet" }
balthastore = { path = "../balthastore" }
balthurner = { path = "../balthurner" }
balthachain = { path = "../balthachain" }
balthaproto = { path = "../balthaproto" }
balthamisc = { path = "../balthamisc" }
balthwasm = { path = "../balthwasm" }
tokio = { version = "0.2.20", features = ["sync"] }
futures = "0.3.5"
async-ctrlc = { version = "1.1.0", features = ["stream"] }
