[package]
name = "balthalib"
version = "0.3.1"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthernet = { path = "../balthernet" }
balthastore = { path = "../balthastore" }
balthurner = { path = "../balthurner" }
balthachain = { path = "../balthachain" }
balthaproto = { path = "../balthaproto" }
balthamisc = { path = "../balthamisc" }
balthwasm = { path = "../balthwasm" }
tokio = { version = "0.3.6", features = ["rt", "rt-multi-thread", "stream", "sync", "time"] }
futures = "0.3.8"
async-ctrlc = { version = "1.2.0", features = ["stream"] }
