[package]
name = "balthamisc"
version = "0.3.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthaproto = { path = "../balthaproto" }
tokio = { version = "0.2.21", features = ["sync"] }
futures = "0.3.5"
parity-multiaddr = "0.9.1"
multihash = "0.11.2"
multibase = "0.8.0"
ethereum-types = "^0.8"
num_cpus = "1.13.0"

[dependencies.libp2p]
version = "0.20.0"
default-features = false
