[package]
name = "balthamisc"
version = "0.3.2"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthaproto = { path = "../balthaproto" }
tokio = { version = "1.17.0", features = ["sync"] }
futures = { version = "0.3.21", features = ["std"] }
multiaddr = "0.14.0"
multibase = "0.9.1"
multihash = { version = "0.16.2", default-features = false, features = ["std", "sha3"] }
# ethereum-types must use the same version as the one used in web3 to avoid conflicts
# ethereum-types = { version = "0.13.1", default-features = false, features = ["std"] }
ethereum-types = { version = "0.12.1", default-features = false, features = ["std"] }
num_cpus = "1.13.1"

[dependencies.libp2p]
version = "0.44.0"
default-features = false
