[package]
name = "balthapode"
version = "0.1.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]

[dependencies]
tokio = "0.1.15"
futures = "0.1.25"
parity-wasm = "0.37.0"
wasmi = "0.4.3"

balthajob = { path = "../balthajob" }
balthmessage = { path = "../balthmessage" }
balthernet = { path = "../balthernet" }
