[package]
name = "balthapode"
version = "0.2.1"
authors = ["GONI Guillaume <gdn3@live.fr>"]

[dependencies]
tokio = "0.1.22"
futures = "0.1.29"
parity-wasm = "0.40.3"
wasmi = "0.5.1"

balthajob = { path = "../balthajob" }
balthmessage = { path = "../balthmessage" }
balthernet = { path = "../balthernet" }
