[package]
name = "balthaproto"
version = "0.3.2"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
prost = { version = "0.10.1", default-features = false, features = ["std"] } # Don't need prost-derive
# futures_codec = "0.4.1" # Not updated anymore, uses older bytes
asynchronous-codec = "0.6.0" # Used by known crates like libp2p
futures = { version = "0.3.21", default-features = false, features = ["std"] }

[dependencies.libp2p]
version = "0.44.0"
default-features = false

[build-dependencies]
prost-build = "0.10.1"
