[package]
name = "balthastore"
version = "0.3.1"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = "0.9.0"
futures = "0.3.8"
http = "0.2.2"
bytes = "0.5.6"
tokio = { version = "0.3.6", features = ["fs"] }
parity-multiaddr = "0.10.0"
either = "1.6.1"
