[package]
name = "balthastore"
version = "0.3.2"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipfs-api = "0.9.0"
futures = "0.3.8"
http = "0.2.2"
bytes = "0.5.6"
tokio = { version = "1.0.1", features = ["fs"] }
tokio-compat-02 = "0.1.2"
parity-multiaddr = "0.10.0"
either = "1.6.1"

[dev-dependencies]
tokio = { version = "1.0.1", features = ["fs", "macros", "rt"] }
