[package]
name = "balthastore"
version = "0.3.3"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: TLS support : with-hyper-tls or with-hyper-rustls
# https://github.com/ferristseng/rust-ipfs-api/blob/master/ipfs-api-backend-hyper/Cargo.toml
ipfs-api-backend-hyper = { version = "0.4.0", features = ["with-send-sync"] }
futures = { version = "0.3.21", features = ["std"] }
bytes = "1.1.0"
tokio = { version = "1.17.0", features = ["fs"] }
multiaddr = "0.14.0"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["fs", "macros", "rt"] }
