[package]
name = "balthernet"
version = "0.3.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthaproto = { path = "../balthaproto" }
balthamisc = { path = "../balthamisc" }
futures = "0.3.4"
void = "1.0.2"
tokio = { version = "0.2.19", features = ["sync", "time"] }

[dependencies.libp2p]
version = "0.18.1"
default-features = false
features = ["dns", "kad", "mdns", "ping", "secio", "tcp", "mplex", "yamux", "websocket"]
