[package]
name = "balthernet"
version = "0.3.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthaproto = { path = "../balthaproto" }
balthamisc = { path = "../balthamisc" }
futures = "0.3.5"
void = "1.0.2"
tokio = { version = "0.2.21", features = ["sync", "time"] }

[dependencies.libp2p]
version = "0.19.0"
default-features = false
# tcp-async-std or tcp-tokio (tokio isn't correctly implemented) ?
features = ["dns", "gossipsub", "kad", "mdns", "mplex", "ping", "secio", "tcp-async-std", "websocket", "yamux"]
