[package]
name = "balthernet"
version = "0.3.1"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthaproto = { path = "../balthaproto" }
balthamisc = { path = "../balthamisc" }
futures = "0.3.8"
void = "1.0.2"
tokio = { version = "0.3.6", features = ["sync", "time"] }
tokio-util = { version = "0.5.1", features = ["time"] }

[dependencies.libp2p]
version = "0.33.0"
default-features = false
# tcp-async-std or tcp-tokio (tokio isn't correctly implemented) ?
features = ["dns", "gossipsub", "kad", "mdns", "mplex", "noise", "ping", "tcp-async-std", "websocket", "yamux"]
