[package]
name = "balthurner"
version = "0.3.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthastore = { path = "../balthastore" }
balthamisc = { path = "../balthamisc" }
wasmer-runtime = "0.16.2"
futures = "0.3.4"
