[package]
name = "balthurner"
version = "0.3.0"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthastore = { path = "../balthastore" }
balthamisc = { path = "../balthamisc" }
futures = "0.3.5"

[dependencies.wasmer-runtime]
version = "0.16.2"
default-features = false
features = ["default-backend-llvm"]
