[package]
name = "balthurner"
version = "0.3.1"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
balthastore = { path = "../balthastore" }
balthamisc = { path = "../balthamisc" }
futures = "0.3.8"

[dependencies.wasmer-runtime]
version = "0.17.1"
default-features = false
features = ["default-backend-cranelift"]
# features = ["default-backend-llvm"]
