[package]
name = "balthwasm"
version = "0.3.1"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
multihash = { version = "0.13.2", default-features = false, features = ["sha3"] }
