[package]
name = "balthwasm"
version = "0.3.2"
authors = ["GONI Guillaume <gdn3@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
multihash = { version = "0.16.2", default-features = false, features = ["std", "sha3"] }
